# modulariot

./: .coderabbit.yaml  .dockerignore  .env  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CLEANUP_PROGRESS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DYNAMIC_FORMS_COMPLETE_IMPLEMENTATION.md  DYNAMIC_FORM_EXAMPLES.md  DYNAMIC_FORM_IMPLEMENTATION.md  DYNAMIC_FORM_IMPLEMENTATION_SUMMARY.md  DYNAMIC_FORM_LIVE_VALUES_PROPOSAL.md  DYNAMIC_FORM_SWR_PROPOSAL.md  Dockerfile  FORM_SUBMISSION_REFACTOR.md  LICENSE  PINOLOGGING_IMPLEMENTATION.md  PINOLOGGING_SUMMARY.md  QUICK_START_DYNAMIC_FORMS.md  README.md  SECURITY.md  bitbucket-pipelines.yml  check-types.result.txt  console-migration-report.json  coordinador-webclient.code-workspace  index.test.html  jest.config.js  knip.json  modulariot-tuborepo.code-workspace  modulariot.code-workspace  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  (+8 more)
miot-harness/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
miot-harness/docs/: architecture.md  dispatch-modes.md
miot-harness/docs/plans/: 2026-06-05-harness-datasource-refactor.md
miot-harness/evals/: README.md  judge_prompt.md
miot-harness/evals/deploy/: 01-image-builds.sh  (+10 more)
miot-harness/examples/: delivery_compliance_request.json
miot-harness/scripts/: README.md  diagnose_task_timeline.py  smoke_auth_e2e.py
miot-harness/tests/: conftest.py  test_chat_models.py  test_config.py  test_critic.py  test_data_fetcher.py  test_data_supervisor.py  test_domain_analyst.py  test_events.py  test_filter_expert.py  test_freshness_judge.py  test_graph_profile_seam.py  test_llm_streaming.py  test_meta_agent_streaming.py  test_nexo_graph.py  test_nexo_supervisor.py  test_plan.py  test_router.py  test_run_golden.py  test_server_lifespan.py  test_storytelling_module.py  test_summarizer.py  test_supervisor_data_branch.py  test_supervisor_nexo_branch.py  test_synthesizer.py  test_synthesizer_streaming.py  test_tool_debug_payload.py  test_tool_registry.py  test_truncation.py
(+3686 files in other folders)
