[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "miot-harness"
version = "0.2.0"
description = "ASK MIOT multi-agent backend harness pilot"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Microbox Labs" }
]
dependencies = [
  "asyncpg>=0.30",
  "deepagents>=0.5.6",
  "fastapi>=0.115",
  "httpx>=0.27",
  "langchain>=1.3.10",
  "langchain-anthropic>=1.4.6",
  "langchain-openai>=0.3",
  "langgraph>=1.1",
  "markdown>=3.9",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "pydantic>=2.10",
  "pydantic-settings>=2.14.2",
  "pyjwt[crypto]>=2.8",
  # Context & Skills manifests are YAML. pyyaml is present transitively
  # via langchain-core; declared directly so a future bump can't drop it.
  "pyyaml>=6",
  "sqlglot>=25.0",
  "traceloop-sdk>=0.33",
  "uvicorn[standard]>=0.30",
  # wrapt 2.x renamed wrap_function_wrapper's `module` kwarg to `target`;
  # traceloop-sdk / opentelemetry-instrumentation-langchain 0.60.0 (latest)
  # still pass `module=` → instrumentor fails to init. Remove once upstream
  # ships a wrapt-2.x compatible release.
  "wrapt<2",
]

[project.scripts]
miot-harness = "miot_harness.cli:main"
miot-harness-evals = "miot_harness.evals.run_golden:main"

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-opentelemetry>=0.5",
  "pytest-postgresql>=6.1",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/miot_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["miot_harness"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "yaml"]
ignore_missing_imports = true
